version 0.2.0
- new object of class 'indicator'
- validation rules now support if-then-else syntax.
- validaton rules can now contain embedded if-statements, e.g. A | (if (B) C)
- results of getter functions (e.g. 'labels') are now named.
- less verbose printng of options for expressionset objects (validator, indicator)
- expressionset objects (validator, indicator) can now be coerced to as.data.frame.
- confrontation objects (validation, indication) can now be coerced to data.frame.
- safer expression manipulation under the hood.


version 0.1.8
- Added loggers for the 'lumberjack' package: lbj_cells and lbj_rules
- Tolerance for checking (non-strict) linear inequalities is now controlled by voptions(lin.ineq.opts).
- Macro assignments through `:=` are no longer put in brackets.

version 0.1.7
- The missingess counters are now only internally documented and will be deprecated (the
  introduction of the '.' made them more or less obsolete).
- Package now 'depends' on methods to allow dispatch on objects inhereting from data.frame
- bugfix: The assignment created(<validator>) <- <POSIXct> was broken. #65, thanks to Andrew R Gibson.
- bugfix: Simple equallity checks on character data behaved unexpectedly. #67, thanks to Kevin Kuo.
- Native routines now registered as required by updated CRAN policy.

version 0.1.5
- The '.' is now used to reference the validated data set as whole.
- Small change in output of 'compare' to match the table in van den Broek et al. (2013)
- registered native routines as now recommended by CRAN

version 0.1.4
- 'confront' now emits a warining when variable name conflicts with name of a reference data set
- Deprecated 'validate_reset', in favour of the shorter 'reset' (use 'validate::reset' in case of ambiguity)
- Deprecated 'validate_options' in favour of the shorter 'voptions'
- New option na.value with default value NA, controlling the output when a rule evaluates to NA.