@@ -36,6 +36,7 @@ export(variables)
 export(voptions)
 exportClasses(lbj_cells)
 exportClasses(lbj_rules)
+exportMethods("+")
 exportMethods("[")
 exportMethods("created<-")
 exportMethods("description<-")
